updating stylesheet & index

--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -1,9 +1,16 @@
+#placeholder {
+    display: block;
+    background-color:aqua;
+    width: 1920px;
+    height: 50px;
+
+}
+
 body {
     background-color:white;
     font-family: verdana;
     color: black;
     font-size: 100%;
-    background-image: linear-gradient(rgba(126, 207, 82, 0.7), rgba(103, 86, 255, 0.4)), url("Assets/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -11,8 +18,16 @@ body {
 	flex-direction: column;
 	min-height: 100vh;
 }
+/* index.html classes */
+.contentBox {
+    display: block;
+    margin-top: 10%;
+    padding: 20px;
+}
 
-.infoBox {
-    border-radius: 25%;
-    color:aqua;
+#indexText {
+    text-align: center;
+    font-size:large;
+    color:black;
+    
 }
