--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -17,6 +17,7 @@ body {
     display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+    margin: 0;
 }
 
 button {
@@ -30,6 +31,25 @@ button {
     flex-direction: column;
     margin: 5%;
     padding: 20px;
+}
+
+.navbar-container {
+    background-color: #61A9D5;
+    height: 70px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+nav {
+    display: flex;
+    float:right;
+    height: 100%;
+}
+
+a {
+    float:right;
 }
 
 /* index.html classes */
