--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -18,6 +18,7 @@ body {
 	flex-direction: column;
 	min-height: 100vh;
     margin: 0;
+    padding: 0;
 }
 
 button {
@@ -28,28 +29,83 @@ button {
 .contentBox {
     background-color: #ffffff;
     display: flex;
+    width: 100%;
     flex-direction: column;
     margin: 5%;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
 }
 
+.pageDisplay {
+    width:100%;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+/* aside */
+
+aside {
+    background-color: #ffffff;
+    width: 15%;
+    height: 720px;
+    float: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.asideButton {
+    background-color: #ffffff; 
+    border: none;
+    color: #545454;
+    height: 70px;
+    width: auto;
+    text-align: center;
+    vertical-align: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 20px;
+    float: right;
+    margin:0;
+    padding: 20px 50px 0 50px;
+}
+
+/* navbar */ 
 .navbar-container {
     background-color: #61A9D5;
     height: 70px;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: center;
     padding: 10px;
 }
 
-nav {
+.navButton {
+    background-color: #61A9D5; 
+    border: none;
+    color: white;
+    height: 70px;
+    width: auto;
+    text-align: center;
+    vertical-align: center;
+    text-decoration: none;
     display: flex;
-    float:right;
-    height: 100%;
+    font-size: 25px;
+    float: right;
+    margin:0;
+    padding: 0 50px 0 0px;
 }
 
-a {
-    float:right;
+.profileContainer {
+    height: 70px;
+    width: 70px;
+}
+
+.profileImage {
+    width:100%;
+    height: 100%;
+    border-radius: 5px;
 }
 
 /* index.html classes */
@@ -57,5 +113,7 @@ a {
     text-align: center;
     font-size:large;
     color:black;
-    
 }
+
+/* signUp classes */
+
