--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -1,11 +1,3 @@
-#placeholder {
-    display: block;
-    background-color:aqua;
-    width: 1920px;
-    height: 50px;
-
-}
-
 body {
     background-color:#D9D9D9;
     font-family: verdana;
@@ -19,11 +11,6 @@ body {
 	min-height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-button {
-    display: flex;
-    float: right;
 }
 
 .contentBox {
@@ -40,6 +27,10 @@ button {
     margin: 0;
     display: flex;
     flex-direction: row;
+}
+
+h1, h2 {
+    font-weight: lighter;
 }
 
 /* aside */
@@ -70,7 +61,7 @@ aside {
 }
 
 /* navbar */ 
-.navbar-container {
+.navbarContainer {
     background-color: #61A9D5;
     height: 70px;
     width: 100%;
@@ -81,20 +72,21 @@ aside {
     padding: 10px;
 }
 
+.navItemContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    height: 100%;
+}
+
 .navButton {
-    background-color: #61A9D5; 
+    display: flex;
     border: none;
     color: white;
-    height: 70px;
-    width: auto;
+    padding: 15px 32px;
     text-align: center;
-    vertical-align: center;
     text-decoration: none;
-    display: flex;
     font-size: 25px;
-    float: right;
-    margin:0;
-    padding: 0 50px 0 0px;
 }
 
 .profileContainer {
@@ -108,14 +100,26 @@ aside {
     border-radius: 5px;
 }
 
+.logoContainer {
+    height: 80%;
+    margin-right: auto;
+}
+
+.logo {
+    height: 100%;
+}
+
 /* index.html classes */
+
 #indexText {
     text-align: center;
     font-size:large;
-    color:black;
+    color:#545454;
 }
 
 /* signUp classes */
+
+
 
 /* login classes */
 #loginButton {
@@ -124,3 +128,5 @@ aside {
     background-color:#61A9D5;
     text-decoration: none;
 }
+
+/* edit/view booking */
