navbar changes, formatting changes

--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -123,10 +123,23 @@ aside {
 
 /* login classes */
 #loginButton {
-    width: 10%;
-    height: 5%;
+    width: 15%;
+    height: 15%;
     background-color:#61A9D5;
     text-decoration: none;
+    border: none;
+    padding: 10px;
+    color: #ffffff;
+    font-size: 20px;
+    font-family:inherit;
 }
 
+.login {
+    height: 100%;
+    width: 100%;
+}
+
+label {
+    font-size: larger;
+}
 /* edit/view booking */
