--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -61,7 +61,7 @@ aside {
 }
 
 /* navbar */ 
-.navbarContainer {
+.navbarContainerIndex, .navbarContainerHome {
     background-color: #61A9D5;
     height: 70px;
     width: 100%;
@@ -77,13 +77,14 @@ aside {
     flex-direction: row-reverse;
     justify-content: flex-start;
     height: 100%;
+    width: 100%;
 }
 
 .navButton {
     display: flex;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 30px;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
@@ -98,6 +99,42 @@ aside {
     width:100%;
     height: 100%;
     border-radius: 5px;
+}
+
+.dropdownContainer {
+    position: relative;
+    display: inline-block;
+    padding: 0 10px;
+}
+
+.dropdownContent {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 10px 10px;
+    border-radius: 5px;
+    position: absolute;
+    background-color: #D9D9D9;
+    width: 200px;
+    top: 100%;
+    right: 0;
+    border: none;
+    box-shadow: 0px 8px 16px 8px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdownContainer.active .dropdownContent {
+    display: flex;
+}
+
+.dropdownItem {
+    display: block;
+    padding: 10px 15px;
+    text-align: center;
+    background-color: #f5f5f5;
+    color: #545454;
+    text-decoration: none;
+    border-radius: 4px;
 }
 
 .logoContainer {
