connecting pages to django views

--- a/Public/templates/editBooking.html
+++ b/Public/templates/editBooking.html
@@ -2,7 +2,7 @@
 <html>
     <link rel="stylesheet" href="stylesheet.css">
     <header>
-        <title>EasyMeetingBooker - Book a Room</title>
+        <title>EasyMeetingBooker - View Bookings</title>
     </header>
     <body>
         <!-- nav -->
@@ -33,20 +33,12 @@
         <div class="pageDisplay">
             <aside>
                 <a href="book.html" class="asideButton">Book a Meeting</a>
-                <a href="editViewBooking.html" class="asideButton">View or Edit a Meeting</a>
+                <a href="viewBooking.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
-                <h1>
-                    Make a Booking
-                </h1>
-                <h2>
-                    1. Choose a day & timeslot
-                </h2>
-                <h2>
-                    2. Confirm Details
-                </h2>
+                <h1>Edit Booking</h1>
             </div>
-        </div>
+            <script src="navbar.js"></script>
         <!--footer-->
     </body>
 </html>
