--- a/Public/templates/book.html
+++ b/Public/templates/book.html
@@ -2,7 +2,7 @@
 <html>
     <link rel="stylesheet" href="stylesheet.css">
     <header>
-        <title>EasyMeetingBooker - View Bookings</title>
+        <title>EasyMeetingBooker - Book a Room</title>
     </header>
     <body>
         <!-- nav -->
@@ -33,11 +33,21 @@
         <div class="pageDisplay">
             <aside>
                 <a href="book.html" class="asideButton">Book a Meeting</a>
-                <a href="editViewBooking.html" class="asideButton">View or Edit a Meeting</a>
+                <a href="viewBooking.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
-                <h1>View Bookings</h1>
+                <h1>
+                    Make a Booking
+                </h1>
+                <h2>
+                    1. Choose a day & timeslot
+                </h2>
+                <h2>
+                    2. Confirm Details
+                </h2>
             </div>
+        </div>
+        <script src="navbar.js"></script>
         <!--footer-->
     </body>
 </html>
