--- a/Public/templates/settings.html
+++ b/Public/templates/settings.html
@@ -33,19 +33,19 @@
         <div class="pageDisplay">
             <aside>
                 <a href="book.html" class="asideButton">Book a Meeting</a>
-                <a href="editViewBooking.html" class="asideButton">View or Edit a Meeting</a>
+                <a href="viewBooking.html" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
-                <div id="indexText">
-                    <p>Welcome back, User.</p>
-                </div>
-                <hr>
-                <div class="meetings">
-                    
-                </div>
+                    <h1 class="formTitle">
+                        Change Password
+                    </h1>
+                        <label for="oldPass">Old Password</label><br>
+                            <input type="text" id="fname" name="fname" value=""><br>
+                        <label for="newPass">New Password</label><br>
+                            <input type="text" id="lname" name="lname" value=""><br><br>
+                        <input id="loginButton" type="submit" value="Login">
             </div>
         </div>
         <script src="navbar.js"></script>
-        <!--footer-->
     </body>
 </html>
