--- a/Public/templates/signUp.html
+++ b/Public/templates/signUp.html
@@ -9,10 +9,10 @@
         <!-- nav -->
         <div class="navbarContainerIndex">
             <div class="navItemContainer">
-                <a href="login.html" class="navButton">
+                <a href="{% url 'login' %}" class="navButton">
                     Login
                 </a>
-                <a href="signUp.html" class="navButton">
+                <a href="{% url 'signUp' %}" class="navButton">
                     Sign Up
                 </a>
             </div>
