--- a/Public/templates/home.html
+++ b/Public/templates/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <!--importing files-->
-    <link rel="stylesheet" href="stylesheet.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
     <header>
         <title>EasyMeetingBooker - Home</title>
     </header>
