--- a/Public/templates/book.html
+++ b/Public/templates/book.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="stylesheet.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
     <header>
         <title>EasyMeetingBooker - Book a Room</title>
     </header>
@@ -26,8 +27,8 @@
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="book.html" class="asideButton">Book a Meeting</a>
-                <a href="viewBooking.html" class="asideButton">View or Edit a Meeting</a>
+                <a href="{% url 'book' %}" class="asideButton">Book a Meeting</a>
+                <a href="{% url 'signUp' %}" class="asideButton">View or Edit a Meeting</a>s
             </aside>
             <div class="contentBox">
                 <h1>
