--- a/Public/templates/book.html
+++ b/Public/templates/book.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
+                <img class="logo" src="{% static 'images/EasyBook.png' %}">
             </div>
         </div>
         
@@ -35,14 +35,20 @@
                     Make a Booking
                 </h1>
                 <h2>
-                    1. Choose a day & timeslot
+                    1. Choose a day
                 </h2>
                 <h2>
-                    2. Confirm Details
+                    2. Choose a time
+                </h2>
+                <h2>
+                    3. Choose a room
+                </h2>
+                <h2>
+                    4. Confirm Details
                 </h2>
             </div>
         </div>
-        <script src="navbar.js"></script>
+        <script src="{% static navbar.js %}"></script>
         <!--footer-->
     </body>
 </html>
