--- a/Public/templates/editBooking.html
+++ b/Public/templates/editBooking.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
+                <img class="logo" src="{% static 'images/EasyBook.png' %}">
             </div>
         </div>
         
@@ -33,7 +33,8 @@
             <div class="contentBox">
                 <h1>Edit Booking</h1>
             </div>
-            <script src="navbar.js"></script>
+        </div>
+        <script src="{% static navbar.js %}"></script>
         <!--footer-->
     </body>
 </html>
