--- a/Public/templates/settings.html
+++ b/Public/templates/settings.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
+                <img class="logo" src="{% static 'images/EasyBook.png' %}">
             </div>
         </div>
         <!--page content-->
@@ -41,6 +41,6 @@
                         <input id="loginButton" type="submit" value="Login">
             </div>
         </div>
-        <script src="navbar.js"></script>
+        <script src="{% static navbar.js %}"></script>
     </body>
 </html>
