--- a/Public/templates/home.html
+++ b/Public/templates/home.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">    
+                <img class="logo" src="{% static 'images/EasyBook.png' %}">
             </div>
         </div>
         <!--page content-->
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <script src="navbar.js"></script>
+        <script src="{% static navbar.js %}"></script>
         <!--footer-->
     </body>
 </html>
