--- a/Public/templates/index.html
+++ b/Public/templates/index.html
@@ -18,8 +18,8 @@
                 </a>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="assets/EasyBook.png">
-            </div>            
+                <img class="logo" src="{% static 'images/EasyBook.png' %}">
+            </div> 
         </div>
 
         <!--page content-->
