CSS fixes, form fixes

--- a/Public/templates/editBooking.html
+++ b/Public/templates/editBooking.html
@@ -34,7 +34,7 @@
                 <h1>Edit Booking</h1>
             </div>
         </div>
-        <script src="{% static navbar.js %}"></script>
+        <script src="{% static 'navbar.js' %}"></script>
         <!--footer-->
     </body>
 </html>
