--- a/Public/templates/settings.html
+++ b/Public/templates/settings.html
@@ -41,6 +41,6 @@
                         <input id="loginButton" type="submit" value="Login">
             </div>
         </div>
-        <script src="{% static navbar.js %}"></script>
+        <script src="{% static 'navbar.js' %}"></script>
     </body>
 </html>
