--- a/Public/static/stylesheet.css
+++ b/Public/static/stylesheet.css
@@ -8,7 +8,7 @@ body {
     background-size: 100% 100%;
     display: flex;
 	flex-direction: column;
-	min-height: 100vh;
+	height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -38,9 +38,10 @@ h1, h2 {
 aside {
     background-color: #8CC6EA;
     width: 15%;
-    float: left;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .asideButton {
@@ -48,15 +49,15 @@ aside {
     border: none;
     color: #ffffff;
     height: 70px;
-    width: auto;
+    width: 100%;
     text-align: center;
-    vertical-align: center;
     text-decoration: none;
     display: flex;
-    font-size: 20px;
-    float: right;
-    margin:0;
-    padding: 20px 50px 0 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
 /* navbar */ 
@@ -92,18 +93,21 @@ aside {
 .profileContainer {
     height: 70px;
     width: 70px;
+    cursor: pointer;
 }
 
 .profileImage {
     width:100%;
     height: 100%;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .dropdownContainer {
     position: relative;
     display: inline-block;
     padding: 0 10px;
+    cursor: pointer !important;
 }
 
 .dropdownContent {
@@ -134,6 +138,7 @@ aside {
     color: #545454;
     text-decoration: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .logoContainer {
@@ -155,12 +160,10 @@ aside {
 
 /* signUp classes */
 
-fieldset {
-    border: none !important;
-}
+
 
 /* login classes */
-#loginButton {
+.submitButton {
     width: 15%;
     height: 10%;
     background-color:#61A9D5;
