--- a/Public/templates/book.html
+++ b/Public/templates/book.html
@@ -48,7 +48,7 @@
                 </h2>
             </div>
         </div>
-        <script src="{% static navbar.js %}"></script>
+        <script src="{% static 'navbar.js' %}"></script>
         <!--footer-->
     </body>
 </html>
