--- a/Public/templates/index.html
+++ b/Public/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--this is the page you get when opening the website logged out.-->
 <html>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
-    <header>
+    <head>
+        {% load static %}
         <title>EasyMeetingBooker</title>
-    </header>
+        <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
+    </head>
     <body>
         <!-- nav -->
         <div class="navbarContainerIndex">
