--- a/Public/templates/login.html
+++ b/Public/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
-    <header>
+    <head>
+        {% load static %}
         <title>Login - EasyMeetingBooker</title>
-    </header>
+        <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
+    </head>
     <body>
         <!-- nav -->
         <div class="navbarContainerIndex">
@@ -23,14 +23,14 @@
         <!--page content-->
         <div class="pageDisplay">
             <aside>
-                <a href="{% url 'login'}" class="asideButton">Book a Meeting</a>
+                <a href="{% url 'login' %}" class="asideButton">Book a Meeting</a>
                 <a href="{% url 'login' %}" class="asideButton">View or Edit a Meeting</a>
             </aside>
             <div class="contentBox">
                 <div class="formTitle">
                     <h1>Login</h1>
                 </div>
-                <form class="signUpForm" action="{% url 'home' %}" method="post">
+                <form class="signUpForm" action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="formBox">
                         <h2>Username:</h2>
@@ -40,8 +40,14 @@
                         <h2>Password:</h2>
                         <input type="password" id="passwordLogin" name="passwordLogin" required>
                     </div><br>
-                    <input type="submit" value="Login">
+                    <input type="submit" value="Login" class="submitButton">
                 </form>
+                <p>Don't have an account? Sign up <a href="{% url 'signUp' %}">here</a>!</p>
+                {% if messages %}
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                {% endif %}
             </div>
         </div>
     </body>
