--- a/Public/static/stylesheet.css
+++ b/Public/static/stylesheet.css
@@ -3,9 +3,6 @@ body {
     font-family: verdana;
     color: #545454;
     font-size: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
     display: flex;
 	flex-direction: column;
 	height: 100%;
@@ -20,6 +17,9 @@ body {
     flex-direction: column;
     margin: 5%;
     padding: 0 20px 20px 20px;
+    height: 100%;
+    flex: 1;
+    box-sizing: border-box;
 }
 
 .pageDisplay {
@@ -27,6 +27,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: row;
+    overflow-y: auto;
 }
 
 h1, h2 {
@@ -38,7 +39,6 @@ h1, h2 {
 aside {
     background-color: #8CC6EA;
     width: 15%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,13 +63,14 @@ aside {
 /* navbar */ 
 .navbarContainerIndex, .navbarContainerHome {
     background-color: #61A9D5;
-    height: 70px;
+    height: 90px;
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .navItemContainer {
@@ -84,7 +85,7 @@ aside {
     display: flex;
     border: none;
     color: white;
-    padding: 15px 30px;
+    padding: 10px 30px;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
@@ -107,7 +108,7 @@ aside {
     position: relative;
     display: inline-block;
     padding: 0 10px;
-    cursor: pointer !important;
+    box-sizing: border-box;
 }
 
 .dropdownContent {
@@ -169,7 +170,7 @@ aside {
     background-color:#61A9D5;
     text-decoration: none;
     border: none;
-    padding: 10px;
+    padding: 5px;
     color: #ffffff;
     font-size: 20px;
     font-family:inherit;
