--- a/Public/templates/home.html
+++ b/Public/templates/home.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
     <!--importing files-->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
-    <header>
-        <title>EasyMeetingBooker - Home</title>
-    </header>
+    <head>
+        {% load static %}
+        <title>Home - EasyMeetingBooker</title>
+        <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
+    </head>
     <body>
         <!-- nav -->
         <div class="navbarContainerHome">
             <div class="navItemContainer">
                 <div class="dropdownContainer">
                     <div class="profileContainer">
-                        <img src="{% static 'images/luka_test.jpg' %}" class="profileImage">
+                        <img src="{% static 'images/defaultPfp.jpg' %}" class="profileImage">
                     </div>
                     <div class="dropdownContent">
                         <a href="{% url 'settings' %}" class="dropdownItem">Settings</a>
-                        <a href="{% url 'index' %}" class="dropdownItem">Log Out</a>
+                        <form action="{% url 'logout' %}" method="post" class="dropdownItem">
+                            {% csrf_token %}
+                            <button type="submit" class="dropdownItem">Log Out</button>
+                        </form>
                     </div>
                 </div>
             </div>
