--- a/Public/templates/signUp.html
+++ b/Public/templates/signUp.html
@@ -18,8 +18,10 @@
                 </a>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="{% static 'images/EasyBook.png' %}">
-            </div>            
+                <a href="{% url 'index'%}">
+                    <img class="logo" src="{% static 'images/EasyBook.png' %}">
+                </a>
+            </div>         
         </div>
 
         <!--page content-->
