--- a/Public/static/stylesheet.css
+++ b/Public/static/stylesheet.css
@@ -24,6 +24,7 @@ body {
 
 .pageDisplay {
     width:100%;
+    height: 100%;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -39,6 +40,7 @@ h1, h2 {
 aside {
     background-color: #8CC6EA;
     width: 15%;
+    height: calc(100vh - 90px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +87,7 @@ aside {
     display: flex;
     border: none;
     color: white;
-    padding: 10px 30px;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
