--- a/Public/templates/editBooking.html
+++ b/Public/templates/editBooking.html
@@ -20,7 +20,9 @@
                 </div>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="{% static 'images/EasyBook.png' %}">
+                <a href="{% url 'home'%}">
+                    <img class="logo" src="{% static 'images/EasyBook.png' %}">
+                </a>
             </div>
         </div>
         
