--- a/Public/templates/login.html
+++ b/Public/templates/login.html
@@ -17,8 +17,10 @@
                 </a>
             </div>
             <div class="logoContainer">
-                <img class="logo" src="{% static 'images/EasyBook.png' %}">
-            </div>   
+                <a href="{% url 'index'%}">
+                    <img class="logo" src="{% static 'images/EasyBook.png' %}">
+                </a>
+            </div>
         </div>
         <!--page content-->
         <div class="pageDisplay">
